# superdev-assignment

./: 0001-assignment.patch  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
indexer/: Cargo.toml
indexer/src/: main.rs
mpc/: Cargo.toml
mpc/src/: main.rs  native_token.rs  serialization.rs  tss.rs
store/: Cargo.toml
store/.sqlx/: query-07b1a79bafaeb4dca1fb95570465ea1daba2ed346eb15a79c62382c589457ec4.json  query-1153b675498a19ea40fe915b2593d2b51658cfc7cf2d5e60f9444f77d7a54d3b.json  query-1c05b63b87f98e4f7f3325c1b8dd4df18de77b436d4d3a3168f54033b2723168.json  query-245a0c98288358dbef2d524192f2d6592246ecce8ab8f247b39d735adc8a3140.json  query-264f5c41f0d52f41964fe499431c4649661e5da4b3b8836b8ac0a785bb1b0f61.json  query-2e23fc2612dae9583baf9b91496e3b5378fc1374a840d14ee237299e1975c6e3.json  query-31e14eff96bef8c7c2a3f1815601f0288d937f2da68c1c5101097d3805d5fdb9.json  query-39dcde70109b55cd65d4e632f3e761a1f2ca46198708ac7ee1b9cee82b344e78.json  query-546353d46a85076f91c62b23bcc1ff51ecb9ed76e09e21c818ca1cd93f45d084.json  query-5bd761e972c34e4bc74d204fde864cbce1769118bc2e84ab071d1c8f12e94aab.json  query-6c6c82a6b46becb059d24724fea10e7ef44414fef325645a47536ce3bd44c469.json  query-71d607695109d56fcb9fb6ac86fed5e505b1837b34b7371f5c547ae6f9db90a5.json  query-82228d1a70211fc89a337b8a4d71642b990c3573426b5ca7c92533f4d87915e1.json  query-96c6d22aa364cdd0e57958f1a311195672a70fbe3d21572c6e65d8df071dad1b.json  query-a3983a9ffa865f130d8c4c49f0664b7383da5cf0d971ad8e3f0e353ffb667492.json  query-af1d34634511170f850175c28e69f02f619e56001ab5c431112c61679e4117fc.json  query-b6fdb095d77e057f758ea5769e52d0773721ecb7595961582a8fb0a0710a588b.json  query-be1387b533b85a170b8d5971302f5b4326ad479f830317eb4991de1938dcd9a7.json  query-bee698cfe3902c4fcbf54a9b7f264dc410c9aae8ad7efc4a535947238c0b7b6e.json  query-c33d08c4381868102736f67e7d22cacb6853825ac61db1ed6cc223956e2924ab.json  query-ca2173fbceab2e40561d603e87738fb5f8c4332773958ccad4f95d01094ccbe7.json  query-cb40de7df7d25cba877d96f444188bb7bc762ca4e09d4a0ea3b0b3e863a2b3df.json  query-d61192941805ec09d7562d0f4a419ed55c097fc7ee46d9f842b48259316790c2.json  query-db3465a4a87e5579b6c3518862ed9a3f8c9df102eb920ded61e43c3e2bcd6d64.json  query-e47922b4c1a8655988b5e732758e0518ddb141ed09643e9f89670a51a8560365.json  query-e4df432c40e90d4f6c1d54e4801ca44ff2ed86fed7c51ee67f892882a46c151f.json  query-e5ee845473e83a89338e9296e21aacdfc0d711abaa18bec4eb3b6890410bf0f5.json  query-e6f7d7606f9f4fbbd792da3b06f3b41a31f420e942d2ce5e20b7b0bc0aba53fd.json  query-eb969f732e442ce3b81eba84e0989e93732b85ebc5383bfdebd9fe1009343386.json  (+2 more)
(+15 files in other folders)
