[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# actix-web = "4.11.0"
# tokio = "1.47.1"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
solana-client = "2.0"
solana-sdk = "2.0"
store = { path = "../store" }