[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bs58 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.16"
solana-client = "1.16"
solana-program = "1.16"
curv = "0.4"
# multi-party-eddsa = "0.4"
base64 = "0.21"
rand = "0.8"
spl-memo = "4.0"
# ed25519-dalek = "1.0.1" 
# rand07 = { package = "rand", version = "0.7" }
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git" }
# curv = {package = "curv-kzen", version = "0.9" }
# curve25519-dalek = "3.2.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono","bigdecimal","decimal","migrate",] }